# TinyGS_QoS

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data/: PU_optuna_SDG_log_loss_v4.joblib  kde_satPosAlt.joblib  kdtree_stations.joblib  packet_features.parquet  satellite_min_gain.parquet  station_locations.parquet
tinygs_qos/: __init__.py  predictor.py  streamlit_app.py
tinygs_qos/utils/: __init__.py  tiny_utils.py
utils/: tiny_utils.py
